fixed the flexbox item overlapping bug on iOS Safari

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -66,4 +66,5 @@
 .hideFilters {
   display: flex;
   overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
 }
