--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,4 +1,5 @@
 .root {
+  flex-shrink: 0; /* yeah, this fixed the overlapping bug on iOS Safari */
   padding: 0.2em 0.5em;
   margin: 0.1em;
   font-size: 0.8em;
